Disable overflow hidden on section div and set fixed height on intro

--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ body{
     height: 100%;
     font-family: 'Roboto', sans-serif;
 }
-nav{
-    height: 50px;
-}
+
 :root {
     --transparent: #0000;
     --header_color: #ff9a47;
@@ -21,13 +19,14 @@ nav{
 
 .header {
     background: var(--header_gradient);
+    width:  max(1200px, 100%);
     height: 60px;
 }
 
 #section {
     width: 100%;
     height: 93%;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: absolute;
 }
 
@@ -35,7 +34,7 @@ nav{
 /* style for intro page */
 #intro {
     width: 1200px;
-    height: 100%;
+    height: 800px;
     margin: auto;
 }
 
